# lxdrunner

./: .gitignore  .style.yapf  Makefile  README.md  config.yml.example  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  setuprunner.sh
.github/workflows/: ci.yml
lxdrunner/: __init__.py  __main__.py  appconf.py  applog.py  dtypes.py  lxd.py  mngr.py  tls.py  util.py  web.py
lxdrunner/scripts/: setuprunner.sh
scripts/: build-alpine-image.sh  build-debian-image.sh  build-image.sh  setup-lxd.sh
service/: lxdrunner.openrc  lxdrunner.service
tests/: config.yml  conftest.py  data.py  gvars.py  test_appconf.py  test_lxd.py  test_mngr.py  test_tls.py  test_util.py  test_web.py  wf_job.json
