[metadata]
name = lxdrunner
# version = attr: lxdrunner.__version__
author = Jonan Santiago
author_email = dont@spam
description = Automatically dispatch Github self-hosted runners via LXD
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jonans/lxdrunner
license = GPLv2

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools-git-versioning

[options.entry_points]
console_scripts=
    lxdrunner = lxdrunner.__main__:main
