[metadata]
name = lxdrunner
version = attr: lxdrunner.__version__
author = Jonan Santiago
author_email = dont@spam
description = Automatically deploy ephemeral Github self-hosted runners on LXD
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jonans/lxdrunner
license = GPLv2
keywords = lxd, github
classifiers = 
  Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools-git-versioning
install_requires =
  pylxd
  ghapi
  Flask
  pydantic
  goodconf[yaml]>=2.0.*
  schedule
  xdg

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
  pytest
  yapf
  jedi
  pytest
  build
  mypy
  flake8
  pip-tools
  isort

[options.package_data]
lxdrunner = scripts/setuprunner.sh

[options.entry_points]
console_scripts=
    lxdrunner = lxdrunner.__main__:main
